--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 streamlit = "^1.29.0"
+langchain = "^0.0.348"
+openai = "^1.3.8"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
