--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ streamlit = "^1.29.0"
 langchain = "^0.0.348"
 openai = "^1.3.8"
 python-dotenv = "^1.0.0"
+duckduckgo-search = "^3.9.11"
+wikipedia = "^1.4.0"
 
 
 [build-system]
